<resources>
    <string name="app_name">FAMEX</string>
    <string name="famex" translatable="false">FAMEX</string>
    <string name="Text1">Francia sera el país invitado\nde honor durante la proxima\nedición de la feria Aeroespacial\nMéxico 2023 (FAMEX 2023) que\nse llevara acabo el 29 de abril\ndel 2023, en la base Aérea Militar\nNumero 1 ubicada en Santa Lucia,\nEstado de México, asi lo ínforma\nel General Sandoval Dueñas,\npresidente del comite de la Feria\nAeroespacial México hizo entrega de la carta de aceptación de Francia como Pais Invitado de Honor  de FAMEX 2023 al señor Jean-Yves Le Drian\nMinistro de Asuntos Exteriores de la Republica Francesa.\n\nFrancia es el cuarto socio comercial\ny sexta fuente de inversión de\nMéxico entre los paises que\nintegran la union Europea ya\nque desde principio de siglo ha\ninvertido mas de $5,200 millones\nde dolares en diversas factorias de\nmanufacturas en San Luis Potosí,\nPuebla, Queretaro, Tamaulipas y\nla Ciudad de México, en sectores\nprioritarios, como la aeronautica,\ndetallo el titular de la FAMEX.\n\nA la fecha Francia es el\nprincipal empleador del sector\n\t\t\t\t\t\t\t\taeronautico en México y\n\t\t\t\t\t\t\t\tgenerar 1 de 4 empleos en\n\t\t\t\t\t\t\t\tla industria aeroespacial.\n\t\t\t\t\t\t\t\tFAMEX 2023 seria la quinta\n\t\t\t\t\t\t\t\tedición de la feria aero-\n\t\t\t\t\t\t\t\tespacial,la cual se a\n\t\t\t\t\t\t\t\tconvertido en un pilar y\n\t\t\t\t\t\t\t\tuna plataforma de\n\t\t\t\t\t\t\t\tnegocios en el ramo,con el\n\t\t\t\t\t\t\t\tapoyo de la triple helice,\n\t\t\t\t\t\t\t\tgobierno,industia y\n\t\t\t\t\t\t\t\tacademia,añadio \n\t\t\t\t\t\t\t\tSandoval. En ediciones \n\t\t\t\t\t\t\t\tpasadas, los paises\n\t\t\t\t\t\t\t\tinvitados a FAMEX han sido\n\t\t\t\t\t\t\t\tCanada y los Estados\n\t\t\t\t\t\t\t\tUnidos de America.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Log_in">Iniciar sesion</string>
    <string name="Registrarme">Registrarme</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Texto1Francia">Principal Empleador del sector aeronautico en México</string>
    <string name="Texto2Francia">Voejmner orivmeirmvie</string>
    <string name="Texto3Francia">1 de 4 empleos en la industria aeroespacial</string>
    <string name="Personalizatuicono">Personaliza tu icono</string>
    <string name="TextoFicha">Federación Mexicana Aeroespacial para promover y potenciar la industria aeroespacial.\nTel:+52 1 5544525697\nEmail:abcdefg@gmail.com\nDirección: Calle XXX #XX Col.X, XXXXX, XXXXX</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="layout_principal">LAYOUT</string>
    <string name="powered_by_principal">Powered by</string>
    <string name="itinerario_principal">ITINERARIO</string>
    <string name="LOGIN_TXT_Inicio">Ingresa tu nombre</string>
    <string name="LOGIN_BTN_Iniciar">INICIAR</string>
    <string name="LOGIN_EDIT_HINT">Nombre de Usuario</string>
    <string name="LOGIN_EDIT_TOAST">"Ingresa tu nombre de usuario"</string>
    <string name="LOGIN_LOG_TOAST">"Buscando Actualizacion"</string>
    <string name="LOGIN_ACT_TOAST">"Actualizando..."</string>
    <string name="REG_BTN_Registro">REGISTRARSE</string>
    <string name="REG_BTN_Volver"> VOLVER</string>
    <string name="REG_TXT_Correo">Correo</string>
    <string name="REG_TXT_Contraseña">Contraseña</string>
    <string name="REG_TXT_RepContraseña">Repetir cnotraseña</string>
    <string name="PRIN_BTN_Layout">EVENTO</string>
    <string name="PRIN_BTN_Itinerario">MI ITINERARIO</string>
    <string name="IT_TXT_1">Mi Día 26</string>
    <string name="IT_TXT_2">Mi Día 27</string>
    <string name="IT_TXT_3">Mi Día 28</string>
    <string name="IT_TOAST_Itinerario">Se agrego a Mi Itinerario</string>
    <string name="EVE_BTN_Mapageneral">MAPA\nGENERAL</string>
    <string name="EVE_BNN_Eventos">E\nV\nE\nN\nT\nO</string>
    <string name="EVE_BTN_Conferencias">CONFERENCIAS</string>
    <string name="EVE_BNN_Pabellones">PABELLONES</string>
    <string name="EVE_BTN_Chalets">CHALETS</string>
    <string name="EVE_BNN_ExpoEsta">EXPOSICIÓN \nESTATICA</string>
    <string name="CON_TAB_Dia1">26 ABRIL\nMIE</string>
    <string name="CON_TAB_Dia2">27 ABRIL\nJUE</string>
    <string name="CON_TAB_Dia3">28 ABRIL\nVIE</string>
    <string name="CON_TXT_Auditorio1">Auditorio Alfa</string>
    <string name="CON_TXT_Auditorio2">Auditorio Bravo</string>
    <string name="CON_TXT_Auditorio3">Auditorio Charlie</string>
    <string name="CON_TXT_Auditorio4">Auditorio Delta</string>
    <string name="CON_TXT_Auditorio5">Auditorio Eco</string>
    <string name="CON_TXT_Auditorio6">Auditorio Foxtrot</string>
    <string name="CON_TXT_Auditorio7">Auditorio</string>
    <string name="CON_TXT_PabellonA">Pabellon A</string>
    <string name="CON_TXT_PabellonB">Pabellon B</string>
    <string name="CON_TXT_PabellonC">Pabellon C</string>
    <string name="CON_TXT_PabellonD">Pabellon D</string>
    <string name="CON_TXT_PabellonE">Pabellon E</string>
    <string name="CON_TXT_PabellonF">Pabellon F</string>
    <string name="CON_TXT_Bam1">B.A.M 1</string>
    <string name="CON_TOAST_Itinerario">Se agrego a Mi Itinerario</string>
    <string name="CHA_TXT_Bloque">"Bloque "</string>
    <string name="CHA_TXT_Bloque1">Bloque 1</string>
    <string name="CHA_TXT_Bloque2">Bloque 2 </string>
    <string name="CHA_TXT_Chalets">Chalets</string>
    <string name="CHA_TOAST_Itinerario">Se agrego a Mi Itinerario</string>
    <string name="EXPE_TLT_Expoestatica">E\nX\nP\nO\nS\nI\nC\nI\nÓ\nN\n \nE\nS\nT\nÁ\nT\nI\nC\nA</string>
    <string name="EXPE_LEYENDA">Para visitar las aeronaves en la feria consulte su ubicación en el mapa general</string>
    <string name="EXPE_TOAST_Itinerario">Se agrego a Mi Itinerario</string>
    <string name="FMX_TXT_SCROLL_T1">¿QUÉ ES?</string>
    <string name="FMX_TXT_SCROLL_T2">HISTORIA</string>
    <string name="FMX_TXT_SCROLL_T3">OBJETIVOS</string>
    <string name="FMX_TXT_SUBT">¿Por qué México?</string>
    <string name="FMX_TXT_LEYENDA">\nEVOLUCIÓN DE LA FERIA AEROESPACIAL \nEN MÉXICO</string>
    <string name="FMX_TXT_TABLA">M\nE\nJ\nO\nR\nA\nN\nD\nO</string>
    <string name="FMX_TXT_EDICIONES">EDICIONES\nPASADAS</string>
    <string name="FMX_TXT_SCROLL_TXT_1">La Feria Aeroespacial México, es un evento internacional organizado por la SEDENA a través de la Fuerza Aérea Mexicana, que exhibe tecnología y producto de vanguardia de los sectores aeronáutico y espacial.</string>
    <string name="FMX_TXT_SCROLL_TXT_2">Inicia en el 2015, para celebrar los 100 años de Aviación Militar en México, convirtiéndose en una plataforma para impulsar el desarrollo económico del sector aeronáutico nacional. </string>
    <string name="FMX_TXT_SCROLL_TXT_3">Reunir a los líderes del sector aeronáutico y espacial para favorecer el intercambio comercial e impulsar el crecimiento de la industria aeroespacial Nacional e Internacional, a través de la inversión extranjera y generación de empleos. </string>
    <string name="FMX_TXT_COLM_1">Expositores</string>
    <string name="FMX_TXT_COLM_2">Aeronaves</string>
    <string name="FMX_TXT_COLM_3">B2B Meetings</string>
    <string name="FMX_TXT_COLM_4">Visitantes</string>
    <string name="FMX_TXT_COLM_5">Paises</string>
    <string name="FR_TXT_titulo">F\nR\nA\nN\nC\nI\nA</string>
    <string name="FR_TXT_BTN_1">CONFERENCIAS ></string>
    <string name="FR_TXT_BTN_2">EXPOSICIÓN\nESTATICA ></string>
    <string name="FR_TXT_BTN_3">CHALETS ></string>
    <string name="FR_TXT_1">Relación México-Francia</string>
    <string name="FR_TXT_2">Industria aeronáutica francesa.</string>
    <string name="FR_TXT_3">Industria aeroespacial francesa.</string>
    <string name="FR_TXT_4">Excelencia Académica francesa.</string>
    <string name="FR_POP_TXT_1">México y Francia sostienen relaciones diplomáticas desde noviembre de 1826 y, desde entonces, han generado vínculos económicos que han derivado en una relación económica y comercial estrecha, dinámica y complementaria. Francia es para México el cuarto socio comercial y sexta fuente de inversión entre los países que integran la Unión Europea. Es de destacar la relación
económica comercial entre México y Francia y, en particular, el impacto de la inversión realizada por empresas francesas en México para el fortalecimiento de encadenamientos productivos entre nuestros países y de los proyectos de cooperación, responsabilidad social y sustentabilidad de éstas en nuestro país.</string>
    <string name="FR_POP_TXT_2">Francia cuenta con un ecosistema rico para el sector aeronáutico y espacial, un gran número de líderes mundiales del sector aeronáutico y espacial tienen presencia en Francia, ¡y varios de ellos son franceses! Airbus Group (ex EADS), Dassault Aviation, Thales, Snecma (Safran), entre otros. Por tal motivo, Este sector estructurador de la economía francesa, suma 73,000
millones de euros en encargos. Asimismo, este sector es un gran generador de puestos de trabajo muy cualificados: el 26 % de los contratos son para técnicos superiores y el 43 % para ingenieros y directivos.</string>
    <string name="FR_POP_TXT_3">En el caso de Francia, los esfuerzos de investigación en la industria aeroespacial representan alrededor del 11% del gasto interno de investigación y desarrollo empresarial nacional, siendo el segundo sector más contribuyente.</string>
    <string name="FR_POP_TXT_4">La excelencia de la educación superior francesa es ampliamente reconocida a través del mundo. Francia invierte masivamente cada año en la educación superior y la investigación; la educación ocupa el primer puesto de gastos en el presupuesto del estado, o sea más del 20%. Los éxitos industriales, tecnológicos y científicos franceses (espacio, transporte, medicina, etc.),
el número de premios Nobel o de medallas Field, demuestran que Francia es un polo de innovación y de investigación entre los más dinámicos.</string>
    <string name="esp_popup_tlt">FONDOS DE PANTALLA</string>
    <string name="esp_popup_btn">DESCARGA</string>
    <string name="MUMA_TLT_1">FAMEX EN\n MUMA</string>
    <string name="aboutA_tlt">Sobre la Aplicacion</string>
    <string name="aboutA_txt1">Feria Aereo Espacial Mexico</string>
    <string name="aboutA_txt2">2022-2023</string>
    <string name="aboutA_txt3">Version 1.0</string>
    <string name="aboutA_txt4">Desarrolladores</string>
    <string name="devs_popup_tlt">Desarrolladores</string>
    <string name="devs_popup_dir">Director de Proyecto\nTTE.F.A.E.E.A Fernando Perez Valerio</string>
    <string name="devs_popup_dev1">Ing. Sistemas Computacionales / Diego Hernandez</string>
    <string name="devs_popup_dev2">Ing. Computacion / Karen Lizeth Rincon Chirinos</string>
    <string name="devs_popup_dev3">Ing. Computacion / Luis Angel Juarez Sanchez</string>
    <string name="devs_popup_dev4">Ing. Computacion / Miguel Angel Martinez Ulloa</string>
    <string name="devs_popup_dev5">Lic. Negocios Internacionales / Abigayl Gomez Gomez</string>
    <string name="devs_popup_dev6">Lic. Diseño Industrial / Erika Itzel Hernandez Flores</string>
    <string name="devs_popup_dev7">Lic. Diseño Industrial / Brenda Daniela Vargas Luna</string>
    <string name="devs_popup_dev8">Lic. Diseño Industrial / Sandra Martinez Guinto</string>
    <string name="devs_popup_dev9">Lic. Diseño Industrial / Jorge Jaramillo Gonzalez</string>
</resources>