<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".pantallas.configuracion.sobreAplicacion.fragPopupDevs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:id="@+id/container"
    android:background="@color/transparencia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/config_pop_fondo"
        android:backgroundTint="@color/transparencia"
        android:backgroundTintMode="screen"
        android:gravity="top"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linearLayout19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp">


            <ImageView
                android:id="@+id/closeIc"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/circlebackground"
                android:gravity="right"
                android:src="@drawable/gr_rutas_ppp_icx"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.797"
                app:layout_constraintStart_toEndOf="@+id/textView96"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView96"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plateiabold"
                android:text="@string/devs_popup_tlt"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.144"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView100"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/devs_popup_dir"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView101"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/devs_popup_dev1"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView102"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/devs_popup_dev2"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView103"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/devs_popup_dev3"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView104"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/devs_popup_dev4"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView106"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/devs_popup_dev9"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView107"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/devs_popup_dev5"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView108"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/devs_popup_dev6"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnUKi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView109"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/devs_popup_dev7"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnMXi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView110"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/devs_popup_dev8"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnFRi"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView84"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/config_popdevs_ic_fa" />

                    <ImageView
                        android:id="@+id/imageView85"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/config_popdevs_ic_uam" />

                    <ImageView
                        android:id="@+id/imageView88"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/config_popdevs_ic_unam" />

                    <ImageView
                        android:id="@+id/imageView86"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/config_popdevs_ic_ipn" />

                    <ImageView
                        android:id="@+id/imageView87"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/config_popdevs_ic_utc" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</FrameLayout>