<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantallas.configuracion.sobreAplicacion.pSobreAplicacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/config_fondo">

        <include
            android:id="@+id/include3"
            layout="@layout/main_toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView82"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:src="@drawable/config_ic_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/abtA_1_txt_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/plateiabold"
                android:text="@string/aboutA_tlt"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView82"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/abtA_2_txt_subtitutlo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/plateiabold"
                android:text="@string/aboutA_txt1"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/abtA_1_txt_titulo" />

            <ImageView
                android:id="@+id/imageView83"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/abtA_2_txt_subtitutlo"
                android:src="@drawable/config_abta_ic_logo" />

            <TextView
                android:id="@+id/textView93"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/plateiabold"
                android:text="@string/aboutA_txt2"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView83" />

            <TextView
                android:id="@+id/abtA_3_txt_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/plateiabold"
                android:text="@string/aboutA_txt3"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView93" />

            <ImageView
                android:id="@+id/btnDesarrolladores"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/abtA_3_txt_version"
                android:src="@drawable/config_abta_fondobtn" />

            <TextView
                android:id="@+id/abtA_4_txt_btnDevs"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/plateiabold"
                android:text="@string/aboutA_txt4"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/btnDesarrolladores"
                app:layout_constraintEnd_toEndOf="@+id/btnDesarrolladores"
                app:layout_constraintStart_toStartOf="@+id/btnDesarrolladores"
                app:layout_constraintTop_toTopOf="@+id/btnDesarrolladores" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include layout="@layout/main_nav_drawer" />

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>